# claude-soccer-prediction

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
src/: config.py
src/betting/: kelly.py  simulate.py  value.py
src/evaluate/: betting_eval.py  clv_analysis.py  model_eval.py
src/features/: build.py  elo.py  head_to_head.py  match_stats.py  team_form.py
src/model/: baseline.py  calibrate.py  predict.py  train.py
